# match-api

./: .eslintrc.json  .gitignore  API_ROUTES.md  ARCHITECTURE.md  Dockerfile  NEW_ECONOMIC_MODEL_PLAN.md  NEW_ONBOARDING_PLAN.md  README.md  STRIPE_INTEGRATION.md  WARP.md  docker-compose.yml  drizzle.config.dev.ts  drizzle.config.ts  eslint.config.js  index.ts  match-collections.json  package.json  test-fix.ts  tsconfig.json
docs/: api_routes.md  architecture.md  architecture_standards.md  authentication.md  environment_variables.md  implementation_plan.md  index.md  mail_service.md  match-app-api-integration.md  qa_runbook_commission_only.md  sports-api-integration.md  status_report.md  stripe_integration.md  venue_opening_hours.md  verification_report.md
docs/internal/: implementation_plan.md  verification_report.md
scripts/: seed-data.ts  seed-sports.ts
services/mail-service/: Cargo.toml  Dockerfile  MAIL_TEMPLATES.md  README.md  index.ts  package.json
services/mail-service/config/: redis.ts
services/mail-service/service/: mail.service.ts
services/mail-service/src/: main.rs
services/mail-service/src/mail/: mail.rs
services/mail-service/templates/: account-deletion.ts  bug-report.ts  data-export-request.ts  index.ts  layout.ts  password-changed.ts  reservation-confirmation.ts  reset-password.ts  support-contact-request.ts  welcome-back.ts  welcome-partner.ts  welcome.ts
services/mail-service/types/: mail.types.ts
services/mail-service/worker/: mail.worker.ts
services/media-service/: README.md  package.json
src/: server.ts
src/config/: billing.ts  (+5 more)
(+254 files in other folders)
