[package]
name = "mail-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures = "0.3.31"
lettre = { version = "0.11.19", features = ["tokio1-native-tls", "smtp-transport"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
